--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,7 +2,7 @@
 
 html, body {
   margin: 0px;
-  background-color: rgb(0, 9, 11);
+  background-color: rgba(0, 1, 1, 1);
   font-family: 'Lato', sans-serif;
 }
 
@@ -12,16 +12,9 @@ html, body {
 
 }
 
-/*body .ember-view:first-of-type {
-  height: 100%;
-  width: 100%;
-}*/
-
 .container {
   max-height: 600px;
   max-width: 900px;
-  max-height: 100vh;
-  max-width: 177.78vh;
   width: 69vw;
   height: 45vw;
   margin: 0 auto;
@@ -42,8 +35,6 @@ html, body {
 
 }
 
-
-
 .grid {
   background-color: none;
   position: absolute;
@@ -56,9 +47,9 @@ html, body {
 .footer h2 {
   text-align: center;
   color: white;
-  font-size: 3em;
+  font-size: 2.7em;
   font-weight: lighter;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.4em;
 }
 
 .social-links-group {
