--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,6 +50,11 @@ html, body {
   font-size: 2.7em;
   font-weight: lighter;
   letter-spacing: 0.4em;
+
+  @media (min-width: 600px) {
+    font-size: 3.75em;
+    letter-spacing: 0.5em;
+  }
 }
 
 .social-links-group {
@@ -103,6 +108,8 @@ html, body {
   z-index: 11;
   font-weight: lighter;
   color: rgba(255, 255, 255, 0.85);
+
+
 }
 
 .instructions {
@@ -134,6 +141,10 @@ html, body {
 }
 
 .soundcloud-player {
-  width: 60%;
+  width: 85%;
   margin: auto;
+
+  @media (min-width: 600px) {
+    width: 60%;
+  }
 }
